--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="headercontrol">
 			<a href="#" id="close" onclick="window.close();">Close</a>
-			<a href="#" id="logout" onclick="instaAuth.clearAccessToken();">Logout</a>
+			<a href="#" id="logout" onclick="instaAuth.clearAccessToken(); window.close();">Logout</a>
 		</div>
 		
 		<div id="welcome">
