--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="headercontrol">
 			<a href="#" id="close" onclick="window.close();">Close</a>
-			<a href="#" id="logout" onclick="instaAuth.clearAccessToken(); window.close();">Logout</a>
+			<a href="#" id="logout" title="share on google+" onclick="instaAuth.clearAccessToken(); window.close();">Logout</a>
 		</div>
 		
 		<div id="welcome">
@@ -28,7 +28,12 @@
 		</div>
 		
 		<div id="footer">
-			This product uses the Instagram API but is not endorsed or certified by Instagram.
+			<p>
+				This product uses the Instagram API but is not endorsed or certified by Instagram.
+			</p>
+			<p>
+				Report a Bug on <a href="http://twitter.com/insaChro" target="_blank">Twitter</a> 
+			</p>
 		</div>
 	</body>
 </html>
