--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
 	<body>
 		<div id="headercontrol">
 			<a href="#" id="close" onclick="window.close();">Close</a>
-			<a href="#" id="stream" onclick="myStream();">Stream</a>
+			<a href="#" id="stream" onclick="myStream();">My Stream</a>
+			<a href="#" id="geo" onclick="getLocation();">Geobased Search</a>
 			<a href="#" id="logout" title="share on google+" onclick="instaAuth.clearAccessToken(); window.close();">Logout</a>
 			
 			<div id="search">
