--- a/popup.html
+++ b/popup.html
@@ -57,6 +57,9 @@
 				Report a Bug on <a href="http://twitter.com/InstaBrowser" target="_blank">Twitter</a> <br />
 				Follow Sebastian on <a href="#" data-uid="483220" class="addfriend">Instagram</a>, <a href="https://plus.google.com/100912127446274756364" target="_blank">Google+</a> or <a href="http://twitter.com/sebat" target="_blank">Twitter</a>
 			</p>
+			<p style="text-align: center; font-weight: bold; background: -webkit-repeating-linear-gradient(black, black, red, yellow, yellow)">
+				<span style="background: #ffffff; padding: 5px; display: inline-block">Made in Germany</span>
+			</p>
 		</div>
 	</body>
 </html>
