Translation german and english

--- a/options.html
+++ b/options.html
@@ -83,7 +83,7 @@
 			<tr>
 				<td colspan="2">
 					<p>
-						<b>Be social, share this Extension</b>
+						<b id="sharethis"></b>
 					</p>
 					<p>
 						<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fighkeghglkbljjmoineeppdkailinjii&amp;send=false&amp;layout=button_count&amp;width=30&amp;show_faces=false&amp;action=recommend&amp;colorscheme=light&amp;font=tahoma&amp;height=21&amp;appId=322146071140561" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
