--- a/options.html
+++ b/options.html
@@ -6,15 +6,16 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<link type="text/css" rel="stylesheet" href="/css/options.css"></link>
 		<script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="/js/env.js"></script>
 		<script type="text/javascript" src="/oauth2/oauth2.js"></script>
 		<script type="text/javascript" src="/js/translate.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		
 			var instaAuth = new OAuth2('instagram', {
-			  client_id: 'e416342f656d42ceb5e0392d7c7d9a8b',
-			  client_secret: '77b89ee61294498396a11be3e1646d89',
-			  api_scope: 'basic+comments+relationships+likes'
-			});
+        client_id: client_id,
+        client_secret: client_secret,
+        api_scope: api_scope
+      });
 			
 			var showSaved = function(triger){
 				$(triger).next('.action-saved').fadeIn('slow', function(){
