--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,11 @@
 		<link type="text/css" href="/css/smoothness/jquery-ui-1.8.17.custom.css" rel="stylesheet" />	
 		<script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="/js/jquery-ui-1.8.17.custom.min.js"></script>
+		<script type="text/javascript" src="/js/env.js"></script>
 		<script type="text/javascript" src="/oauth2/oauth2.js"></script>
 		<script type="text/javascript" src="/js/popup.js"></script>
 		<script type="text/javascript" src="/js/translate.js"></script>
+		
 		<link type="text/css" rel="stylesheet" href="/css/popup.css"></link>
 		
 		<script type="text/javascript">
